# bjtu_canting

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.md  conftest.py  findings.md  gen_docs.py  progress.md  pyproject.toml  requirements.txt  task_plan.md
.claude/: launch.json
BJTU_Canteen_System/BJTU_Canteen_System/: index.html
backend/: app.py  simulation.db
backend/api/: campus_history_store.py  campus_routes.py  campus_stats_helpers.py  db_migrate.py  (+1 more)
docs/: project_requirements.md
reviews/: 2026-05-16_code-review.md
tests/: conftest.py  test_api.py  test_arrival_generator.py  test_arrival_schedule.py  test_campus.py  test_campus_api.py  test_campus_config_helpers.py  test_campus_history_store.py  test_campus_intervention_api.py  test_campus_preset_loader.py  test_campus_reproducibility_ab.py  test_campus_simulation_service.py  test_campus_stats_helpers.py  test_canteen_config.py  test_coordinator.py  test_db_migration.py  test_dining_sim.py  test_engine.py  test_engine_facade.py  test_frontend_a16_ui_contract.py  test_frontend_analysis_charts_contract.py  test_frontend_campus_js_contract.py  test_frontend_floor_tabs_js_contract.py  test_frontend_main_js_contract.py  test_frontend_single_canteen_ui_contract.py  test_frontend_three_js_contract.py  test_multi_floor.py  test_package_migration_guard.py  test_queue_sim.py  test_random_streams.py  test_router.py  test_simpy_canteen.py  test_single_canteen_preset.py  test_stats.py  test_student_lifecycle.py  test_student_trace.py  test_twin_visual_assets_contract.py  test_window.py  test_window_intervention.py
(+142 files in other folders)
